:lipstick: bugfix align content

--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -99,6 +99,11 @@ main {
 
   h1 {
     font-size: 4rem;
+    text-align: center;
+  }
+
+  .folder-img {
+    text-align: center;
   }
 
   .documents-wrapper {
